# bmstu_labs_sem1

./: CMakeLists.txt  README.md
lab-02-condition-loop/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
lab-03-array/: task1.cpp  task10.cpp  task11.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp  tasks.h
lab-04-functions/: lab_04_tasks.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
lab-05-struct/: lab_05_struct.h  task1.cpp
lab-06-containers/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp  tasks.h
lab-07-file-stream/: task1.cpp  task2.cpp  task3.cpp  tasks.h
lab_01/: task1.cpp
